syntax = "proto3";
package waves.events.grpc;
option java_package = "com.wavesplatform.events.api.grpc.protobuf";
option csharp_namespace = "Waves.Events.Grpc";
option go_package = "github.com/wavesplatform/gowaves/pkg/grpc/generated/waves/events/grpc";

import "waves/events/events.proto";

service BlockchainUpdatesApi {
    rpc GetBlockUpdate (GetBlockUpdateRequest) returns (GetBlockUpdateResponse);
    rpc GetBlockUpdatesRange (GetBlockUpdatesRangeRequest) returns (GetBlockUpdatesRangeResponse);
    rpc Subscribe (SubscribeRequest) returns (stream SubscribeEvent);
}

message GetBlockUpdateRequest {
    int32 height = 1;
}

message GetBlockUpdateResponse {
    waves.events.BlockchainUpdated update = 1;
}

message GetBlockUpdatesRangeRequest {
    // both required, inclusive
    int32 from_height = 1;
    int32 to_height = 2;
}

message GetBlockUpdatesRangeResponse {
    repeated waves.events.BlockchainUpdated updates = 1;
}

message SubscribeRequest {
    // Optional. Default: start at the genesis, height 1.
    int32 from_height = 1;
    // Optional. Default: stream historical, then switch to current events.
    int32 to_height = 2;
}

message SubscribeEvent {
    waves.events.BlockchainUpdated update = 1;
}
